fix typo and and link for data types mapping

--- a/Streams-EventStoreSample.ipynb
+++ b/Streams-EventStoreSample.ipynb
@@ -194,6 +194,9 @@
     "\n",
     "Important: The tuple field types and positions in the IBM Streams schema must match the field names in your IBM Db2 Event Store table schema exactly.\n",
     "\n",
+    "Supported types: [Mapping of Event Store types to SPL types](https://ibmstreams.github.io/streamsx.eventstore/doc/spldoc/html/tk$com.ibm.streamsx.eventstore/op$com.ibm.streamsx.eventstore$EventStoreSink$1.html)\n",
+    "\n",
+    "\n",
     "In this example, the sharding key and the primary key are defined on the same column `ID`.\n",
     "\n",
     "Databases in IBM Db2 Event Store are partitioned into shards. Any given IBM Db2 Event Store node (in a multi-node IBM Db2 Event Store cluster) contains 0, 1, or N shards of the defined database. In addition to the mandatory shard key, you can optionally provide a primary key. When you define a primary key, IBM Db2 Event Store ensures that only a single version of each primary key exists in the database.\n",
@@ -289,7 +292,7 @@
     "batch_size=100\n",
     "\n",
     "# insert tuple data into table as rows\n",
-    "sink=es.insert(pulse, config=app_cfg, table=table, batch_size=batch_size, primary_key='id', partitioning_key='id', truststore=es_truststore, keystore=es_keystore, name='ES_Inserter')"
+    "sink=es.insert(pulse, config=app_cfg, table=table, batch_size=batch_size, primary_key='ID', partitioning_key='ID', truststore=es_truststore, keystore=es_keystore, name='ES_Inserter')"
    ]
   },
   {
