corrections, typos, renamings after review

--- a/Streams-KafkaParallelSample.ipynb
+++ b/Streams-KafkaParallelSample.ipynb
@@ -78,7 +78,7 @@
     "\n",
     "Other settings, like SSL related settings depend on the broker configuration.\n",
     "\n",
-    "In the Kafka broker, create a partitioned topic, for example three partitions. Enter the bootstrap servers and the topic name into the below cell."
+    "In the Kafka broker, create a partitioned topic, for example with three partitions. Enter the bootstrap servers and the topic name into the below cell."
    ]
   },
   {
@@ -268,7 +268,7 @@
     "\n",
     "\n",
     "# parses the JSON in the message and adds the attributes to a tuple\n",
-    "def flat_message_json(tuple):\n",
+    "def parse_json_to_tuple(tuple):\n",
     "    # the tuple is passed in as dict, the output tuple is typing.NamedTuple\n",
     "    messageAsDict = json.loads(tuple['message']) # {\"sensor_id\": \"sensor_4545\", \"value\": 3567.87, \"ts\": 1559029421}\n",
     "    # 5 required positional arguments: 'sensor_id', 'reading', 'ts', 'partition', and 'messageTimestamp'\n",
@@ -281,14 +281,14 @@
     "    )\n",
     "\n",
     "# map the parallelized stream to the new schema\n",
-    "receivedParallelPartitionedFlattened = receivedParallelPartitioned.map(\n",
-    "    func=flat_message_json,\n",
+    "receivedParallelPartitionedParsed = receivedParallelPartitioned.map(\n",
+    "    func=parse_json_to_tuple,\n",
     "    name='ParseMsgJson',\n",
     "    schema=SensorMessage)\n",
     "\n",
-    "# validate by remove negativ and zero values from the streams,\n",
-    "# pass only positive vaues and timestamps\n",
-    "receivedValidated = receivedParallelPartitionedFlattened.filter(\n",
+    "# validate by removing negative and zero values from the streams,\n",
+    "# pass only positive values and timestamps\n",
+    "receivedValidated = receivedParallelPartitionedParsed.filter(\n",
     "    # remember, the tuple tup is passed as a Python named tuple, not as a dict\n",
     "    lambda tup: (tup.reading > 0) and (tup.ts > 0),\n",
     "    name='Validate')\n",
@@ -304,7 +304,7 @@
     "<a name=\"create_view\"></a>\n",
     "## 2.3 Create a `View` to preview the tuples on the `Stream` \n",
     "\n",
-    "A `View` is a connection to a `Stream` that becomes activated when the application is running. We examine the data from within the notebook in section 4, below.\n"
+    "A `View` is a connection to a `Stream` that becomes activated when the application is running. We examine the data from within the notebook in [section 5](#view), below.\n"
    ]
   },
   {
@@ -325,9 +325,7 @@
     "\n",
     "The `parallelEnd` stream is our final result. We will use `Stream.publish()` to make this stream available to other Streams applications.\n",
     "\n",
-    "If you want to send the stream to another database or system, you would use a sink function (similar to the source function) and invoke it using `Stream.for_each`.\n",
-    "\n",
-    "You can also the functions of other Python packages to send the stream to other systems, for example the eventstore."
+    "If you want to send the stream to another database or system, you would use a sink function and invoke it using `Stream.for_each`. You can also use the functions of other Python packages to send the stream to other systems, for example the eventstore."
    ]
   },
   {
@@ -411,9 +409,7 @@
    "source": [
     "## 3.2 Publish the data to the Kafka topic\n",
     "\n",
-    "For advanced producer configurations please review the [producer configs section](https://kafka.apache.org/21/documentation.html#producerconfigs) of the Kafka documentation. Here we setup only the `bootstrap.servers` as used for the consumers. For a Kafka basic install out of the box this is sufficient. When you have configured authentication or other security options for the consumer, you must configure the same options also for the producer.\n",
-    "\n",
-    "Here we setup only the `bootstrap.servers` as used for the consumers. For a Kafka basic install out of the box this is sufficient."
+    "For advanced producer configurations please review the [producer configs section](https://kafka.apache.org/21/documentation.html#producerconfigs) of the Kafka documentation. Here we setup only the `bootstrap.servers` as used for the consumers. For a Kafka basic install out of the box this is sufficient. When you have configured authentication or other security options for the consumer, you must configure the same options also for the producer.\n"
    ]
   },
   {
@@ -455,7 +451,7 @@
     "consumer_submission_result = submit(ContextTypes.DISTRIBUTED, consumer_topology, cfg)\n",
     "consumer_job = consumer_submission_result.job\n",
     "if consumer_job:\n",
-    "    print(\"JobId of consumer job: \", consumer_job.id , \"\\nJob name: \", consumer_job.name)\n"
+    "    print(\"JobId of consumer job: \", consumer_job.id , \"\\nJob name: \", consumer_job.name)"
    ]
   },
   {
