Improvement of database notebook
Improvement of database notebook
1-  The beacon streams operators have been replaced with a python function generate_data().
2- Add new view  has been added to see the retrieving data from a table in database.
3- The hard coded Insert SQL statement replaced with genData stream.
4- The Test table has now 3 columns.

--- a/Streams-DatabaseSample.ipynb
+++ b/Streams-DatabaseSample.ipynb
@@ -12,12 +12,14 @@
     " 1. [Setup your data connections](#setup)\n",
     " 2. [Create the application](#create)\n",
     " 3. [Submit the application](#launch)\n",
-    " 4. [Stop the application](#cancel)\n",
+    " 4. [View the results](#view)\n",
+    " 5. [Job status](#status)\n",
+    " 6. [Stop the application](#cancel)\n",
     "\n",
     "# Overview\n",
     "**About the sample**\n",
     "\n",
-    "This application demonstrates how to drop a table, create a table, insert rows into a table and to read rows from a Db2 Warehouse database.\n",
+    "This application demonstrates how to drop a table, create a table, insert rows into a table and to get (SELECT) rows from a Db2 Warehouse database.\n",
     "\n",
     "**How it works**\n",
     "   \n",
@@ -79,7 +81,7 @@
     "import streamsx.database as db\n",
     "import streamsx.topology.context\n",
     "print(\"INFO: streamsx package version: \" + streamsx.topology.context.__version__)\n",
-    "print(\"INFO: streamsx.database package version: \" + db.__version__)"
+    "print(\"INFO: streamsx.database package version: \" + db.__version__)\n"
    ]
   },
   {
@@ -121,9 +123,10 @@
     "## <a name=\"create\"> </a> 2. Create the application\n",
     "\n",
     "This application is going to \n",
-    "- create a table in DB2 database.\n",
-    "- Insert a row into table\n",
-    "- drop the table\n",
+    "- drop the DB2 table, if exists.\n",
+    "- create a new table in a DB2 database.\n",
+    "- insert some rows into the table.\n",
+    "- select all rows from a table.\n",
     "\n",
     "All Streams applications start with a Topology object, so start by creating one:\n"
    ]
@@ -138,6 +141,9 @@
     "from streamsx.topology.topology import *\n",
     "from streamsx.topology.context import *\n",
     "from streamsx.topology.schema import CommonSchema\n",
+    "from streamsx.topology.schema import StreamSchema\n",
+    "import random\n",
+    "import time\n",
     "import streamsx.spl.op as op\n",
     "import streamsx.database as db\n",
     "import json\n",
@@ -148,43 +154,54 @@
     "table_name = 'RUN_SAMPLE_DEMO'\n",
     "\n",
     "topo = Topology(name=\"database\")\n",
-    "sql_drop = 'DROP TABLE '+table_name\n",
-    "sql_create = 'CREATE TABLE '+table_name+' (ID INT, NAME CHAR(30))'\n",
-    "sql_insert = 'INSERT INTO '+table_name+' (ID, NAME) VALUES (1, \\'my name\\')'\n",
-    "sql_select = 'SELECT * FROM '+table_name\n",
+    "\n",
+    "# SQL statements\n",
+    "sql_drop = 'DROP TABLE ' + table_name\n",
+    "sql_create = 'CREATE TABLE ' + table_name + ' (ID INT, NAME CHAR(30), AGE INT)'\n",
+    "sql_insert = 'INSERT INTO ' + table_name + ' (ID, NAME, AGE) VALUES (? , ?, ?)'\n",
+    "sql_select = 'SELECT * FROM ' + table_name\n",
+    "\n",
+    "# drop the table if exist and create a new table in database\n",
     "source = topo.source([sql_drop, sql_create]).as_string()\n",
-    "\n",
-    "\n",
     "res_sql = db.run_statement(source, db2credentials)\n",
     "res_sql.print()\n",
     "\n",
-    "createInsertSql = op.Source(topo, \"spl.utility::Beacon\", 'tuple<rstring sql>', params = {'initDelay':2.0, 'period':1.00, 'iterations' : 20})\n",
-    "createInsertSql.sql = createInsertSql.output(value = \"\\\"\" + sql_insert + \"\\\"\")\n",
     "\n",
-    "print(createInsertSql.sql)\n",
+    "# generates some data with schema (ID, NAME, AGE)\n",
+    "def generate_data():\n",
+    "    counter = 0\n",
+    "    for x in range(0, 5000):\n",
+    "        #yield a random id, name and age\n",
+    "        yield  {\"NAME\": \"Name_\" + str(random.randint(0,500)), \"ID\": counter, \"AGE\": random.randint(10,99)}\n",
+    "        counter = counter + 1\n",
+    "        time.sleep(0.10)\n",
     "\n",
-    "createInsertSql.stream.print()\n",
+    "# convert it to SPL schema for the database operator run_statement\n",
+    "tuple_schema = StreamSchema(\"tuple<int32 ID, rstring NAME, int32 AGE>\")\n",
+    "# Generates data for a stream of three attributes. Each attribute maps to a column using the same name of the DB2 database table.\n",
+    "genData = topo.source(generate_data, name=\"GeneratedData\").map(lambda tpl: (tpl[\"ID\"], tpl[\"NAME\"], tpl[\"AGE\"]), schema=tuple_schema)\n",
     "\n",
-    "createSelectSql = op.Source(topo, \"spl.utility::Beacon\", 'tuple<rstring sql>', params = {'initDelay':35.0, 'period':1.00, 'iterations' : 5})\n",
-    "createSelectSql.sql = createSelectSql.output(value = \"\\\"\" + sql_select + \"\\\"\")\n",
-    "print(createSelectSql.sql)\n",
-    " \n",
-    "# insert some rows into table\n",
-    "res_insert= db.run_statement(name=\"INSERT\", stream=createInsertSql.stream, sql=createInsertSql.sql, credentials = db2credentials)\n",
+    "genData.print()\n",
+    "\n",
+    "# insert generated rows into table\n",
+    "# It uses the statement (sql) and statementParamAttrs (sql_params) of streamsx.jdbc toolkit \n",
+    "res_insert= db.run_statement(name=\"INSERT\", stream=genData, sql=sql_insert, sql_params=\"ID, NAME, AGE\" ,credentials = db2credentials)\n",
     "res_insert.print()\n",
     "\n",
     "# select all rows from table\n",
-    "res_select= db.run_statement(name=\"SELECT\", schema='tuple<int32 ID, rstring NAME>', stream=createSelectSql.stream, sql=createSelectSql.sql, credentials = db2credentials)\n",
-    "res_select.print()\n"
+    "res_select= db.run_statement(name=\"SELECT\", schema='tuple<int32 ID, rstring NAME, int32 AGE>', stream=genData, sql=sql_select, credentials = db2credentials)\n",
+    "res_select.print()\n",
+    "\n",
+    "# create a view to check retrieving data from a table\n",
+    "select_view = res_select.view(name=\"selectRecords\", description=\"Sample of selected records\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a name=\"launch\"></a>\n",
+    "# <a name=\"launch\"> </a> 3. Submit the application\n",
     "\n",
-    "# 3. Submit the application\n",
     "A running Streams application is called a *job*. This next cell submits the application for execution and prints the resulting job id."
    ]
   },
@@ -211,15 +228,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <a name=\"status\"> </a> 4. See job status\n",
+    "# <a name=\"view\"> </a> 4. Use the View to access data from the job\n",
+    "\n",
+    "Now that the job is started, use the View object you have already created to start retrieving data from a table in database."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Connect to the view and display the selected data\n",
+    "queue = select_view.start_data_fetch()\n",
+    "try:\n",
+    "    for val in range(20):\n",
+    "        print(queue.get())    \n",
+    "finally:\n",
+    "    select_view.stop_data_fetch()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <a name=\"status\"> </a> 5. See job status\n",
     "\n",
     "You can view job status and logs by going to My Instances > Jobs. Find your job based on the id printed above. Retrieve job logs using the \"Download jobs\" action from the job's context menu.\n",
     "\n",
     "To view other information about the job such as detailed metrics, access the Streams Console. Go to My Instances > Provisioned Instances. Select the Streams instance and open the URL listed under externalConsoleEndpoint or serviceConsoleEndpoint.\n",
-    "\n",
-    "<a name=\"cancel\"></a>\n",
-    "\n",
-    "# 5. Cancel the job\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <a name=\"cancel\"></a> 6. Cancel the job\n",
     "\n",
     "This cell generates a widget you can use to cancel the job.\n"
    ]
@@ -238,7 +283,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "You can also interact with the job through the Job object returned from submission_result.job\n",
     "\n",
     "For example, use job.cancel() to cancel the running job directly.\n",
