Improvement of database note book
Improvement of database note book
- Add more details about the:
   IBM Streams SPL types 
   Topology streams
   streamsx.databe.run_statement

- The name of some functions and variables have been changed.
- The main program has been divided in 4 sections .

--- a/Streams-DatabaseSample.ipynb
+++ b/Streams-DatabaseSample.ipynb
@@ -11,10 +11,14 @@
     "In this notebook, you'll see examples of how to:\n",
     " 1. [Setup your data connections](#setup)\n",
     " 2. [Create the application](#create)\n",
+    "     - [Drop and create the table](#drop)\n",
+    "     - [Insert streaming data](#insert)\n",
+    "     - [Retrieve data from the table](#select)\n",
     " 3. [Submit the application](#launch)\n",
     " 4. [View the results](#view)\n",
     " 5. [Job status](#status)\n",
     " 6. [Stop the application](#cancel)\n",
+    "\n",
     "\n",
     "# Overview\n",
     "**About the sample**\n",
@@ -103,7 +107,15 @@
     "\n",
     "- 2 Create a service credential for DB2 service on IBM cloud.\n",
     "- 3 Copy the credentials in clipboard.\n",
-    "- 4 Paste the credentials into Db2 Warehouse credentials prompt below."
+    "- 4 Paste the credentials into Db2 Warehouse credentials prompt below.\n",
+    "\n",
+    "If you want to use another DB2 database, you can create a JSON string with the following attributes:\n",
+    "\n",
+    "    {\n",
+    "      \"username\": \"your-db-user-name\",\n",
+    "      \"password\": \"your-db-password\",\n",
+    "      \"jdbcurl\": \"jdbc:db2://your-db2-hostname:50000/your-database-name\"\n",
+    "    }"
    ]
   },
   {
@@ -121,13 +133,6 @@
    "metadata": {},
    "source": [
     "## <a name=\"create\"> </a> 2. Create the application\n",
-    "\n",
-    "This application is going to \n",
-    "- drop the DB2 table, if exists.\n",
-    "- create a new table in a DB2 database.\n",
-    "- insert some rows into the table.\n",
-    "- select all rows from a table.\n",
-    "\n",
     "All Streams applications start with a Topology object, so start by creating one:\n"
    ]
   },
@@ -140,40 +145,117 @@
     "#Imports\n",
     "from streamsx.topology.topology import *\n",
     "from streamsx.topology.context import *\n",
-    "from streamsx.topology.schema import CommonSchema\n",
     "from streamsx.topology.schema import StreamSchema\n",
-    "import random\n",
-    "import time\n",
-    "import streamsx.spl.op as op\n",
     "import streamsx.database as db\n",
     "import json\n",
-    "from streamsx.topology import context\n",
     "\n",
+    "# store the databse credentials in db2credentials\n",
     "db2credentials = json.loads(db2_service_credentials)\n",
     "\n",
+    "# create a Topology object\n",
+    "topo = Topology(name=\"database\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### How to use the streamsx.database package\n",
+    "To interact with the database from Streams, you pass a SQL statement to the `streamsx.database.run_statement` function.\n",
+    "\n",
+    "For example, this application executes SQL statements that: \n",
+    "- drop the DB2 table, if exists.\n",
+    "- create a new table in a DB2 database.\n",
+    "- insert some rows into the table.\n",
+    "- select all rows from a table.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define the SQL statements and table name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "table_name = 'RUN_SAMPLE_DEMO'\n",
     "\n",
-    "topo = Topology(name=\"database\")\n",
-    "\n",
     "# SQL statements\n",
-    "sql_drop = 'DROP TABLE ' + table_name\n",
+    "sql_drop   = 'DROP TABLE ' + table_name\n",
     "sql_create = 'CREATE TABLE ' + table_name + ' (ID INT, NAME CHAR(30), AGE INT)'\n",
     "sql_insert = 'INSERT INTO ' + table_name + ' (ID, NAME, AGE) VALUES (? , ?, ?)'\n",
-    "sql_select = 'SELECT * FROM ' + table_name\n",
+    "sql_select = 'SELECT * FROM ' + table_name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <a name=\"drop\"> </a> 2.1. Create the table\n",
+    "The **run_statement** is the main function of **streamsx.database** package.\n",
     "\n",
+    "The streamsx.database package is the python wrapper for [streamsx.jdbc](https://ibmstreams.github.io/streamsx.jdbc/doc/spldoc/html) toolkit.\n",
+    "\n",
+    "It needs at last two mandatory parameters, the first one is a stream as input and the secund parameter is the database credentials in json format.\n",
+    "\n",
+    "In the following step the topo.source creates a stream with two sql statements and db.run_statement uses this as input stream to drop the table and create a new one table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The streamToCreateTable is the ouput os a topology stream that delivers two strings: sql_drop and sql_create\n",
+    "streamToCreateTable = topo.source([sql_drop, sql_create]).as_string()\n",
     "# drop the table if exist and create a new table in database\n",
-    "source = topo.source([sql_drop, sql_create]).as_string()\n",
-    "res_sql = db.run_statement(source, db2credentials)\n",
-    "res_sql.print()\n",
+    "createTableResults = db.run_statement(name=\"CREATE_TABLE\", stream=streamToCreateTable, credentials=db2credentials)\n",
+    "createTableResults.print()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <a name=\"insert\"> </a> 2.2. Insert streaming data into the table\n",
     "\n",
+    "Generate a stream of data and insert it into the table we created.\n",
+    "\n",
+    "The **run_statement** is based on [streamsx.jdbc](https://ibmstreams.github.io/streamsx.jdbc/doc/spldoc/html) toolkit.\n",
+    "\n",
+    "The function **generate_data()** generates some data with schema (ID INTEGER, NAME STRING, AGE INTEGER).\n",
+    "\n",
+    "We have to convert the output of generate_data() to the streams tuple schema, because the **JDBCRun** opeartor in **streamsx.jdbc** toolkit accepets only the SPL data tapes.\n",
+    "\n",
+    "Here is a list of data type in IBM streams: [IBM Streams Data types](https://www.ibm.com/support/knowledgecenter/en/SSCRJU_4.3.0/com.ibm.streams.ref.doc/doc/primitivetypes.html)\n",
+    "\n",
+    "\n",
+    "The **genData** is also a topology source stream. It gets the data from **generate_data()** and produces a stream of three attributes as input for INSERT. \n",
+    "\n",
+    "The **run_statement** uses in the first step **streamToCreateTable** as input stream, but in the following step, it uses **genData** as input stream.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import time\n",
     "\n",
     "# generates some data with schema (ID, NAME, AGE)\n",
     "def generate_data():\n",
-    "    counter = 0\n",
-    "    for x in range(0, 5000):\n",
+    "    for counter in range(0, 5000):\n",
     "        #yield a random id, name and age\n",
     "        yield  {\"NAME\": \"Name_\" + str(random.randint(0,500)), \"ID\": counter, \"AGE\": random.randint(10,99)}\n",
-    "        counter = counter + 1\n",
     "        time.sleep(0.10)\n",
     "\n",
     "# convert it to SPL schema for the database operator run_statement\n",
@@ -185,15 +267,31 @@
     "\n",
     "# insert generated rows into table\n",
     "# It uses the statement (sql) and statementParamAttrs (sql_params) of streamsx.jdbc toolkit \n",
-    "res_insert= db.run_statement(name=\"INSERT\", stream=genData, sql=sql_insert, sql_params=\"ID, NAME, AGE\" ,credentials = db2credentials)\n",
-    "res_insert.print()\n",
-    "\n",
+    "insertResults= db.run_statement(name=\"INSERT\", stream=genData, sql=sql_insert, sql_params=\"ID, NAME, AGE\" ,credentials = db2credentials)\n",
+    "insertResults.print()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <a name=\"select\"> </a> 2.3. Retrieve data from the table\n",
+    "In this step the **run_statement** runs the SQL statement \"SELECT * FROM RUN_SAMPLE_DEMO\" and returns the results in tuple schema tuple<int32 ID, rstring NAME, int32 AGE>'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# select all rows from table\n",
-    "res_select= db.run_statement(name=\"SELECT\", schema='tuple<int32 ID, rstring NAME, int32 AGE>', stream=genData, sql=sql_select, credentials = db2credentials)\n",
-    "res_select.print()\n",
+    "selectResults= db.run_statement(name=\"SELECT\", schema='tuple<int32 ID, rstring NAME, int32 AGE>', stream=genData, sql=sql_select, credentials = db2credentials)\n",
+    "selectResults.print()\n",
     "\n",
     "# create a view to check retrieving data from a table\n",
-    "select_view = res_select.view(name=\"selectRecords\", description=\"Sample of selected records\")\n"
+    "selectView = selectResults.view(name=\"selectRecords\", description=\"Sample of selected records\")\n"
    ]
   },
   {
@@ -240,12 +338,12 @@
    "outputs": [],
    "source": [
     "# Connect to the view and display the selected data\n",
-    "queue = select_view.start_data_fetch()\n",
+    "queue = selectView.start_data_fetch()\n",
     "try:\n",
     "    for val in range(20):\n",
     "        print(queue.get())    \n",
     "finally:\n",
-    "    select_view.stop_data_fetch()"
+    "    selectView.stop_data_fetch()"
    ]
   },
   {
@@ -291,7 +389,11 @@
     "\n",
     "We started with a Stream a job, which connected to DB2 database, dropped a table, created a table, inserted some rows into table and reads the rows.\n",
     "\n",
-    "After submitting the application to the Streams service, we checked the application logs to see the progress.\n"
+    "After submitting the application to the Streams service, we checked the application logs to see the progress.\n",
+    "\n",
+    "It is also possible to check the conatin of the test table on DB2 console with the follwing command.\n",
+    "\n",
+    "      db2 \"SELECT * FROM RUN_SAMPLE_DEMO\"\n"
    ]
   },
   {
