Fix the formatting/spelling

--- a/Streams-DatabaseSample.ipynb
+++ b/Streams-DatabaseSample.ipynb
@@ -200,9 +200,9 @@
     "## <a name=\"drop\"> </a> 2.1. Create the table\n",
     "The **run_statement** is the main function of **streamsx.database** package.\n",
     "\n",
-    "The streamsx.database package is the python wrapper for [streamsx.jdbc](https://ibmstreams.github.io/streamsx.jdbc/doc/spldoc/html) toolkit.\n",
+    "The streamsx.database package is the python wrapper for **streamsx.jdbc** toolkit.\n",
     "\n",
-    "It needs at last two mandatory parameters, the first one is a stream as input and the secund parameter is the database credentials in json format.\n",
+    "It needs at least two mandatory parameters, the first one is a stream as input and the second parameter is the database credentials in json format.\n",
     "\n",
     "In the following step the topo.source creates a stream with two sql statements and db.run_statement uses this as input stream to drop the table and create a new one table."
    ]
@@ -213,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The streamToCreateTable is the ouput os a topology stream that delivers two strings: sql_drop and sql_create\n",
+    "# The streamToCreateTable is a Stream containing the two SQL statements: sql_drop and sql_create\n",
     "streamToCreateTable = topo.source([sql_drop, sql_create]).as_string()\n",
     "# drop the table if exist and create a new table in database\n",
     "createTableResults = db.run_statement(name=\"CREATE_TABLE\", stream=streamToCreateTable, credentials=db2credentials)\n",
