Fix formatting /wording
- DB2 replaced with Db2
- The functions names in text have been formatted.
- They are not bold but in code notation.
....

--- a/Streams-DatabaseSample.ipynb
+++ b/Streams-DatabaseSample.ipynb
@@ -94,22 +94,22 @@
    "source": [
     "### 1.3 Configure the connection to Db2 Warehouse\n",
     "\n",
-    "We need a DB2 credentials as JSON string to connect to a DB2 database.\n",
-    "This JSON string contains the database credentials **username**, **password** and **jdbcurl**.\n",
+    "We need a Db2 credentials as JSON string to connect to a Db2 database.\n",
+    "This JSON string contains the database credentials `username`, `password` and `jdbcurl`.\n",
     "\n",
-    "To create a DB2 credentials, please perform the following steps:\n",
+    "To create a Db2 credentials, please perform the following steps:\n",
     "\n",
     "- 1 Create a Db2 Warehouse service on IBM cloud.\n",
     "\n",
-    "  you need to have an IBM account to create a DB2 service.\n",
+    "  you need to have an IBM account to create a Db2 service.\n",
     "\n",
     "  https://console.bluemix.net/catalog/?search=db2\n",
     "\n",
-    "- 2 Create a service credential for DB2 service on IBM cloud.\n",
+    "- 2 Create a service credential for Db2 service on IBM cloud.\n",
     "- 3 Copy the credentials in clipboard.\n",
     "- 4 Paste the credentials into Db2 Warehouse credentials prompt below.\n",
     "\n",
-    "If you want to use another DB2 database, you can create a JSON string with the following attributes:\n",
+    "If you want to use another Db2 database, you can create a JSON string with the following attributes:\n",
     "\n",
     "    {\n",
     "      \"username\": \"your-db-user-name\",\n",
@@ -165,8 +165,8 @@
     "To interact with the database from Streams, you pass a SQL statement to the `streamsx.database.run_statement` function.\n",
     "\n",
     "For example, this application executes SQL statements that: \n",
-    "- drop the DB2 table, if exists.\n",
-    "- create a new table in a DB2 database.\n",
+    "- drop the Db2 table, if exists.\n",
+    "- create a new table in a Db2 database.\n",
     "- insert some rows into the table.\n",
     "- select all rows from a table.\n"
    ]
@@ -198,13 +198,15 @@
    "metadata": {},
    "source": [
     "## <a name=\"drop\"> </a> 2.1. Create the table\n",
-    "The **run_statement** is the main function of **streamsx.database** package.\n",
+    "`run_statement` is the main function of `streamsx.database` package.\n",
     "\n",
-    "The streamsx.database package is the python wrapper for **streamsx.jdbc** toolkit.\n",
+    "The streamsx.database package is the python wrapper for [streamsx.jdbc](https://ibmstreams.github.io/streamsx.jdbc/doc/spldoc/html) toolkit.\n",
     "\n",
-    "It needs at least two mandatory parameters, the first one is a stream as input and the second parameter is the database credentials in json format.\n",
+    "It needs at least two mandatory parameters, the first one is a stream as input and the second parameter is the database credentials in JSON format.\n",
     "\n",
-    "In the following step the topo.source creates a stream with two sql statements and db.run_statement uses this as input stream to drop the table and create a new one table."
+    "In the following step the `topo.source` creates a Stream containing the two SQL statements to drop and create the table. \n",
+    "\n",
+    "`db.run_statement` executes the two statements in the input stream, so it will drop the table and create a new table.\n"
    ]
   },
   {
@@ -228,18 +230,26 @@
     "\n",
     "Generate a stream of data and insert it into the table we created.\n",
     "\n",
-    "The **run_statement** is based on [streamsx.jdbc](https://ibmstreams.github.io/streamsx.jdbc/doc/spldoc/html) toolkit.\n",
+    "The `run_statement` is based on [streamsx.jdbc](https://ibmstreams.github.io/streamsx.jdbc/doc/spldoc/html) toolkit.\n",
     "\n",
-    "The function **generate_data()** generates some data with schema (ID INTEGER, NAME STRING, AGE INTEGER).\n",
+    "The function `generate_data()` generates some data with schema (ID INTEGER, NAME STRING, AGE INTEGER).\n",
     "\n",
-    "We have to convert the output of generate_data() to the streams tuple schema, because the **JDBCRun** opeartor in **streamsx.jdbc** toolkit accepets only the SPL data tapes.\n",
+    "Before it can be inserted in the database, we have to convert output of generate_data() to the StreamsSchema type, which is the format accepted by the run_statement function.\n",
     "\n",
     "Here is a list of data type in IBM streams: [IBM Streams Data types](https://www.ibm.com/support/knowledgecenter/en/SSCRJU_4.3.0/com.ibm.streams.ref.doc/doc/primitivetypes.html)\n",
     "\n",
     "\n",
-    "The **genData** is also a topology source stream. It gets the data from **generate_data()** and produces a stream of three attributes as input for INSERT. \n",
+    "The `genData` is also a topology source stream. It gets the data from `generate_data()` and produces a stream of three attributes as input for INSERT. \n",
     "\n",
-    "The **run_statement** uses in the first step **streamToCreateTable** as input stream, but in the following step, it uses **genData** as input stream.\n"
+    "The `sql` parameter is an optional parameter in the `run_statement`.\n",
+    "\n",
+    "There are to ways to put sql statements into run_statement .\n",
+    "\n",
+    "1- Direct over the input stream. (CREATE_TABLE)\n",
+    "\n",
+    "2- Set the sql value of `sql` parameter in the operator. (INSERT)\n",
+    "\n",
+    "The `run_statement` uses in the first step `streamToCreateTable` as input stream, but in the following step, it uses `genData` as input stream.\n"
    ]
   },
   {
@@ -260,7 +270,7 @@
     "\n",
     "# convert it to SPL schema for the database operator run_statement\n",
     "tuple_schema = StreamSchema(\"tuple<int32 ID, rstring NAME, int32 AGE>\")\n",
-    "# Generates data for a stream of three attributes. Each attribute maps to a column using the same name of the DB2 database table.\n",
+    "# Generates data for a stream of three attributes. Each attribute maps to a column using the same name of the Db2 database table.\n",
     "genData = topo.source(generate_data, name=\"GeneratedData\").map(lambda tpl: (tpl[\"ID\"], tpl[\"NAME\"], tpl[\"AGE\"]), schema=tuple_schema)\n",
     "\n",
     "genData.print()\n",
@@ -277,7 +287,7 @@
    "metadata": {},
    "source": [
     "## <a name=\"select\"> </a> 2.3. Retrieve data from the table\n",
-    "In this step the **run_statement** runs the SQL statement \"SELECT * FROM RUN_SAMPLE_DEMO\" and returns the results in tuple schema tuple<int32 ID, rstring NAME, int32 AGE>'"
+    "In this step the `run_statement` runs the SQL statement `\"SELECT * FROM RUN_SAMPLE_DEMO\"` and returns the results in tuple schema `tuple<int32 ID, rstring NAME, int32 AGE>` .\n"
    ]
   },
   {
@@ -381,17 +391,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also interact with the job through the Job object returned from submission_result.job\n",
+    "You can also interact with the job through the Job object returned from \n",
     "\n",
-    "For example, use job.cancel() to cancel the running job directly.\n",
+    "    submission_result.job\n",
+    "\n",
+    "For example, use  `job.cancel()` to cancel the running job directly.\n",
     "\n",
     "## Summary\n",
     "\n",
-    "We started with a Stream a job, which connected to DB2 database, dropped a table, created a table, inserted some rows into table and reads the rows.\n",
+    "We created an application which connects to Db2 database, dropped a table, created a table, inserted some rows into table and reads the rows.\n",
     "\n",
     "After submitting the application to the Streams service, we checked the application logs to see the progress.\n",
     "\n",
-    "It is also possible to check the conatin of the test table on DB2 console with the follwing command.\n",
+    "It is also possible to check the contents of the test table on Db2 console with the following command.\n",
     "\n",
     "      db2 \"SELECT * FROM RUN_SAMPLE_DEMO\"\n"
    ]
