--- a/Streams-DatabaseSample.ipynb
+++ b/Streams-DatabaseSample.ipynb
@@ -95,19 +95,15 @@
     "### 1.3 Configure the connection to Db2 Warehouse\n",
     "\n",
     "We need a Db2 credentials as JSON string to connect to a Db2 database.\n",
-    "This JSON string contains the database credentials `username`, `password` and `jdbcurl`.\n",
-    "\n",
+    "This JSON string contains the database credentials `username`, `password` and `jdbcurl`.<br />\n",
     "To create a Db2 credentials, please perform the following steps:\n",
+    "- Create a Db2 Warehouse service on IBM cloud.<br />\n",
+    "  You need to have an IBM account to create a Db2 service.\n",
+    "  https://console.bluemix.net/catalog/?search=db2'\n",
     "\n",
-    "- 1 Create a Db2 Warehouse service on IBM cloud.\n",
-    "\n",
-    "  you need to have an IBM account to create a Db2 service.\n",
-    "\n",
-    "  https://console.bluemix.net/catalog/?search=db2\n",
-    "\n",
-    "- 2 Create a service credential for Db2 service on IBM cloud.\n",
-    "- 3 Copy the credentials in clipboard.\n",
-    "- 4 Paste the credentials into Db2 Warehouse credentials prompt below.\n",
+    "- Create a service credential for Db2 service on IBM cloud.\n",
+    "- Copy the credentials in clipboard.\n",
+    "- Paste the credentials into `Db2 Warehouse credentials` prompt below.\n",
     "\n",
     "If you want to use another Db2 database, you can create a JSON string with the following attributes:\n",
     "\n",
@@ -124,6 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import getpass\n",
     "db2_service_credentials=getpass.getpass('Db2 Warehouse credentials:')"
    ]
@@ -168,7 +165,7 @@
     "- drop the Db2 table, if exists.\n",
     "- create a new table in a Db2 database.\n",
     "- insert some rows into the table.\n",
-    "- select all rows from a table.\n"
+    "- select all rows from a table."
    ]
   },
   {
@@ -198,15 +195,13 @@
    "metadata": {},
    "source": [
     "## <a name=\"drop\"> </a> 2.1. Create the table\n",
-    "`run_statement` is the main function of `streamsx.database` package.\n",
     "\n",
-    "The streamsx.database package is the python wrapper for [streamsx.jdbc](https://ibmstreams.github.io/streamsx.jdbc/doc/spldoc/html) toolkit.\n",
-    "\n",
+    "The streamsx.database package is the PYTHON wrapper for [streamsx.jdbc](https://ibmstreams.github.io/streamsx.jdbc/doc/spldoc/html) toolkit.<br />\n",
+    "`run_statement` is the main function of `streamsx.database` package.<br />\n",
     "It needs at least two mandatory parameters, the first one is a stream as input and the second parameter is the database credentials in JSON format.\n",
     "\n",
-    "In the following step the `topo.source` creates a Stream containing the two SQL statements to drop and create the table. \n",
-    "\n",
-    "`db.run_statement` executes the two statements in the input stream, so it will drop the table and create a new table.\n"
+    "In the following step the `topo.source` creates a Stream containing the two SQL statements to drop and create the table. <br />\n",
+    "`db.run_statement` executes the two statements in the input stream, so it will drop the table and create a new table."
    ]
   },
   {
@@ -228,28 +223,14 @@
    "source": [
     "## <a name=\"insert\"> </a> 2.2. Insert streaming data into the table\n",
     "\n",
-    "Generate a stream of data and insert it into the table we created.\n",
+    "Next, we generate a stream of data and insert it into the table we created.<br />\n",
+    "The function `generate_data()` generates some data with schema `(ID INTEGER, NAME STRING, AGE INTEGER)` that will be inserted into the database..\n",
     "\n",
-    "The `run_statement` is based on [streamsx.jdbc](https://ibmstreams.github.io/streamsx.jdbc/doc/spldoc/html) toolkit.\n",
+    "Before it can be inserted in the database, we have to change the [schema](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.schema.html) of the input data Stream to the [StreamsSchema](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.schema.html#streamsx.topology.schema.StreamSchema) type, which is the format accepted by the run_statement function. <br />\n",
+    "See the [list of mappings from Python types to StreamSchema types](https://streamsxtopology.readthedocs.io/en/stable/streamsx.topology.schema.html#streamsx.topology.schema.StreamSchema) .\n",
     "\n",
-    "The function `generate_data()` generates some data with schema (ID INTEGER, NAME STRING, AGE INTEGER).\n",
-    "\n",
-    "Before it can be inserted in the database, we have to convert output of generate_data() to the StreamsSchema type, which is the format accepted by the run_statement function.\n",
-    "\n",
-    "Here is a list of data type in IBM streams: [IBM Streams Data types](https://www.ibm.com/support/knowledgecenter/en/SSCRJU_4.3.0/com.ibm.streams.ref.doc/doc/primitivetypes.html)\n",
-    "\n",
-    "\n",
-    "The `genData` is also a topology source stream. It gets the data from `generate_data()` and produces a stream of three attributes as input for INSERT. \n",
-    "\n",
-    "The `sql` parameter is an optional parameter in the `run_statement`.\n",
-    "\n",
-    "There are to ways to put sql statements into run_statement .\n",
-    "\n",
-    "1- Direct over the input stream. (CREATE_TABLE)\n",
-    "\n",
-    "2- Set the sql value of `sql` parameter in the operator. (INSERT)\n",
-    "\n",
-    "The `run_statement` uses in the first step `streamToCreateTable` as input stream, but in the following step, it uses `genData` as input stream.\n"
+    "The `genData` Stream contains the data produced by the `generate_data()` function.<br />\n",
+    "We again use `db.run_statement` but in the following step, it uses `genData` as input stream and the predefined sql_insert variable as the SQL statement.\n"
    ]
   },
   {
@@ -362,10 +343,10 @@
    "source": [
     "# <a name=\"status\"> </a> 5. See job status\n",
     "\n",
-    "You can view job status and logs by going to My Instances > Jobs. Find your job based on the id printed above. Retrieve job logs using the \"Download jobs\" action from the job's context menu.\n",
-    "\n",
-    "To view other information about the job such as detailed metrics, access the Streams Console. Go to My Instances > Provisioned Instances. Select the Streams instance and open the URL listed under externalConsoleEndpoint or serviceConsoleEndpoint.\n",
-    "\n"
+    "You can view job status and logs by going to **My Instances > Jobs**. Find your job based on the id printed above. <br />\n",
+    "Retrieve job logs using the **Download logs** action from the job's context menu.<br />\n",
+    "To view other information about the job such as detailed metrics, access the Streams Console. <br />\n",
+    "Go to **My Instances > Provisioned Instances**. Select the Streams instance and open the URL listed under **externalConsoleEndpoint** or **serviceConsoleEndpoint**.\n"
    ]
   },
   {
